--- a/Module4/Casestudy/web/src/main/resources/templates/customer/list.html
+++ b/Module4/Casestudy/web/src/main/resources/templates/customer/list.html
@@ -1,3 +1,66 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org">-->
+<!--&lt;!&ndash;th:replace="home.html"&ndash;&gt;-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Customers</h1>-->
+<!--<p>-->
+<!--    <a class="btn btn-default" href="/">Home</a><br>-->
+<!--    <a class="btn btn-default" href="/customer/create-customer">Create new customer</a><br>-->
+<!--    <a class="btn btn-default" href="/customerType/">List CustomerType</a>-->
+<!--</p>-->
+<!--<form>-->
+<!--    Search by first name:-->
+<!--    <input name="search" type="text"/>-->
+<!--    <input class="btn btn-primary" type="submit" value="Search"/>-->
+<!--</form>-->
+<!--<br/>-->
+<!--&lt;!&ndash;class="table table-success table-striped"&ndash;&gt;-->
+<!--<table class="table table-primary table-striped">-->
+<!--    <tr>-->
+<!--        <th>Id</th>-->
+<!--        <th>Type_name</th>-->
+<!--        <th>Name</th>-->
+<!--        <th>Birthday</th>-->
+<!--        <th>Gender</th>-->
+<!--        <th>Id_card</th>-->
+<!--        <th>Phone</th>-->
+<!--        <th>Email</th>-->
+<!--        <th>Address</th>-->
+<!--        <th>Edit</th>-->
+<!--        <th>Delete</th>-->
+<!--    </tr>-->
+<!--    <th:block th:each="customer : ${customers}">-->
+<!--        <tr>-->
+<!--            <td th:text="${customer.id}"></td>-->
+<!--            <td th:text="${customer.customerType.id}"></td>-->
+<!--            <td th:text="${customer.name}"></td>-->
+<!--            <td th:text="${customer.birthday}"></td>-->
+<!--            <td th:text="${customer.gender}"></td>-->
+<!--            <td th:text="${customer.idcard}"></td>-->
+<!--            <td th:text="${customer.phone}"></td>-->
+<!--            <td th:text="${customer.email}"></td>-->
+<!--            <td th:text="${customer.address}"></td>-->
+<!--            <td><a type="button" class="btn btn-primary" th:href="@{/customer/edit-customer/__${customer.id}__ }">Edit</a></td>-->
+<!--            <td><a type="button" class="btn btn-warning"th:href="@{/customer/delete-customer/__${customer.id}__ }">Delete</a></td>-->
+<!--        </tr>-->
+<!--    </th:block>-->
+<!--</table>-->
+<!--<div>-->
+<!--    <a th:href="@{'/customer'(page=${customers.number - 1})}" th:if="${customers.hasPrevious()}">Previous</a>-->
+<!--    <span th:text="${customers.number + 1}"></span>/<span th:text="${customers.totalPages}"></span>-->
+<!--    <a th:href="@{'/customer'(page=${customers.number + 1})}" th:if="${customers.hasNext()}">Next</a>-->
+<!--</div>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>-->
+<!--</body>-->
+<!--</html>-->
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <!--th:replace="home.html"-->
