--- a/Module4/Casestudy/web/src/main/resources/templates/customer/delete.html
+++ b/Module4/Casestudy/web/src/main/resources/templates/customer/delete.html
@@ -76,7 +76,7 @@
         <div>
             <tr>
                 <td></td>
-                <td><input class="btn btn-primary" type="submit" value="Create customer"></td>
+                <td><input class="btn btn-primary" type="submit" value="Delete customer"></td>
             </tr>
         </div>
     </table>
