--- a/Module4/Casestudy/web/src/main/resources/templates/customer/create.html
+++ b/Module4/Casestudy/web/src/main/resources/templates/customer/create.html
@@ -26,10 +26,10 @@
         <div class="container">
             <div class="form-group">
                 <label>Type_name: </label>
-                <input class="form-control" type="text" th:field="*{customerType.id}">
-<!--                <select th:field="*{customerType}">-->
-<!--                    <option th:each="customerType : ${customerTpye}" th:value="${customerType.id}" th:text="${customerType.name}"></option>-->
-<!--                </select>-->
+<!--                <input class="form-control" type="text" th:field="*{customerType.id}">-->
+                <select th:field="*{customerType}">
+                    <option th:each="customerType : ${customerTpye}" th:value="${customerType.id}" th:text="${customerType.name}"></option>
+                </select>
             </div>
         </div>
         <div class="container">
