--- a/Module4/Casestudy/web/src/main/resources/templates/customer/edit.html
+++ b/Module4/Casestudy/web/src/main/resources/templates/customer/edit.html
@@ -27,10 +27,10 @@
         <div class="container">
             <div class="form-group">
                 <label>Type_name: </label>
-                <input class="form-control" type="text" th:field="*{customerType.id}">
-<!--                <select th:field="*{customerType}">-->
-<!--                    <option th:each="customerType : ${customerType}" th:value="${customerType.id}" th:text="${customerType.name}"></option>-->
-<!--                </select>-->
+<!--                <input class="form-control" type="text" th:field="*{customerType.id}">-->
+                <select th:field="*{customerType}">
+                    <option th:each="customerType : ${customerTpye}" th:value="${customerType.id}" th:text="${customerType.name}"></option>
+                </select>
             </div>
         </div>
         <div class="container">
@@ -78,7 +78,7 @@
         <div>
             <tr>
                 <td></td>
-                <td><input class="btn btn-primary" type="submit" value="Create customer"></td>
+                <td><input class="btn btn-primary" type="submit" value="Edit customer"></td>
             </tr>
         </div>
     </table>
