--- a/Module4.1/CaseStudy/webfurama/src/main/resources/templates/customer/list.html
+++ b/Module4.1/CaseStudy/webfurama/src/main/resources/templates/customer/list.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Customers</h1>
 <p>
-    <a class="btn btn-default" href="/">Home</a><br>
+    <a class="btn btn-default" href="/">Home</a>
     <a class="btn btn-default" href="/create">Create new customer</a><br>
 </p>
 <form>
@@ -45,7 +45,31 @@
             <td th:text="${c.address}"></td>
             <td th:text="${c.customerType.name}"></td>
             <td><a type="button" class="btn btn-primary" th:href="@{/edit/__${c.id}__ }">Edit</a></td>
-            <td><a type="button" class="btn btn-warning"th:href="@{/delete/__${c.id}__ }">Delete</a></td>
+<!--            <td><a type="button" class="btn btn-warning"th:href="@{/delete/__${c.id}__ }">Delete</a></td>-->
+            <td>
+                <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#delete">Delete</button>
+            </td>
+
+            <td class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <form th:action="@{/delete/{id}(id=${c.id})}" class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="delete">Delete</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Bạn có muốn xóa không ?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-secondary">Delete</button>
+                        </div>
+                    </form>
+                </div>
+            </td>
         </tr>
     </th:block>
 </table>
@@ -54,8 +78,14 @@
     <span th:text="${customers.number + 1}"></span>/<span th:text="${customers.totalPages}"></span>
     <a th:href="@{'/customer'(page=${customers.number + 1})}" th:if="${customers.hasNext()}">Next</a>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 </html>
