--- a/Module4.1/CaseStudy/webfurama/src/main/resources/templates/customer/create.html
+++ b/Module4.1/CaseStudy/webfurama/src/main/resources/templates/customer/create.html
@@ -28,6 +28,9 @@
                     <label>Name: </label>
                     <input class="form-control" type="text" th:field="*{name}">
                 </div>
+                <div>
+                    <p class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</p>
+                </div>
             </div>
             <div class="container">
                 <div class="form-group">
@@ -52,11 +55,17 @@
                     <label>Phone: </label>
                     <input class="form-control" type="text" th:field="*{phone}">
                 </div>
+                <div>
+                    <p class="text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}">Phone Error</p>
+                </div>
             </div>
             <div class="container">
                 <div class="form-group">
                     <label>Email: </label>
                     <input class="form-control" type="text" th:field="*{email}">
+                </div>
+                <div>
+                    <p class="text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</p>
                 </div>
             </div>
             <div class="container">
