--- a/Module4.1/module4/passmodule4/src/main/resources/templates/home.html
+++ b/Module4.1/module4/passmodule4/src/main/resources/templates/home.html
@@ -58,8 +58,7 @@
 
 <div class="topnav">
     <a href="/">Home</a>
-    <a href="customer">Customer</a>
-    <a href="service">Service</a>
+    <a href="promotion">Khuyến mãi</a>
 </div>
 <div class="main">
     <div class="sidebar">
