--- a/Module4/BaiThi/thi4/src/main/resources/templates/question/delete.html
+++ b/Module4/BaiThi/thi4/src/main/resources/templates/question/delete.html
@@ -8,7 +8,7 @@
 <body>
 <h3>Delete</h3>
 <div class="col-5">
-    <form th:action = "@{/question/edit-question}" method="post" th:object="${question}">
+    <form th:action = "@{/question/delete}" method="post" th:object="${question}">
         <div class="container">
             <div class="form-group">
                 <label>Tiêu đề: </label>
@@ -25,9 +25,6 @@
             <div class="form-group">
                 <label>Loại câu hỏi: </label>
                 <input class="form-control" type="text" th:field="*{questionType.name}">
-<!--                <td><select th:field="*{questionType}">//${customer.province}-->
-<!--                    <option th:each="questionType:${questionTypes}" th:text="${questionType.name}" th:value="${questionType.id}"></option>-->
-<!--                </select>-->
             </div>
         </div>
 
