--- a/Module4/BaiThi/thi4/src/main/resources/templates/question/list.html
+++ b/Module4/BaiThi/thi4/src/main/resources/templates/question/list.html
@@ -37,8 +37,31 @@
             <td th:text="${q.questionType.name}"></td>
             <td th:text="${q.dateCreate}"></td>
             <td th:text="${q.status}"></td>
-            <td><a type="button" class="btn btn-primary" th:href="@{/question/edit-question/__${q.id}__ }">Edit</a></td>
-            <td><a type="button" class="btn btn-warning"th:href="@{/question/delete-question/__${q.id}__ }">Delete</a></td>
+            <td><a type="button" class="btn btn-primary" th:href="@{/question/edit/__${q.id}__ }">Edit</a></td>
+<!--            <td><a type="button" class="btn btn-warning"th:href="@{/question/delete/__${q.id}__ }">Delete</a></td>-->
+            <td>
+                <button type="button" class="btn btn-danger" data-toggle="modal" th:attr="data-target=${'#delete'+q.id}" data-target="#delete">Xóa</button>
+            </td>
+            <td class="modal fade" th:id="${'delete'+q.id}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <form th:action="@{/question/delete/__${q.id}__}" class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="delete">Delete</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Bạn có muốn xóa không ?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                            <button type="submit" class="btn btn-secondary">Xóa</button>
+                        </div>
+                    </form>
+                </div>
+            </td>
         </tr>
     </th:block>
 </table>
@@ -47,8 +70,14 @@
     <span th:text="${question.number + 1}"></span>/<span th:text="${question.totalPages}"></span>
     <a th:href="@{'/question'(page=${question.number + 1})}" th:if="${question.hasNext()}">Next</a>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 </html>
