--- a/Module5/ss6/template-form/src/app/template-form-student/template-form-student.component.html
+++ b/Module5/ss6/template-form/src/app/template-form-student/template-form-student.component.html
@@ -7,21 +7,21 @@
       <div class="form-group">
         <label for="StudentCode">Student Code</label>
         <input
-           [ngModel] = "student.StudentCode"
+           [(ngModel)] = "student.StudentCode"
            name="StudentCode"
            type="text" class="form-control" id="StudentCode" aria-describedby="student" placeholder="student code">
       </div><br>
       <div class="form-group">
         <label for="StudentName">Student Name</label>
         <input
-          [ngModel] = "student.StudentName"
+          [(ngModel)] = "student.StudentName"
           name="StudentName"
           type="text" class="form-control" id="StudentName" placeholder="student name">
       </div><Br>
       <div class="form-group">
         <label for="StudentAddress">Student Address</label>
         <input
-          [ngModel] = "student.StudentAddress"
+          [(ngModel)] = "student.StudentAddress"
           name="StudentAddress"
           type="text" class="form-control" id="StudentAddress" placeholder="student address">
       </div><Br>
